16_subseq/grade.txt
Grading at Sun Jan 31 10:29:24 UTC 2021
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:14:55: error: expected ‘)’ before ‘{’ token
     if ( (current > array[i]) || (current == array[i]){
                                                       ^
maxSeq.c:25:3: error: expected expression before ‘}’ token
   }
   ^
maxSeq.c:7:10: error: unused variable ‘tempmax’ [-Werror=unused-variable]
   size_t tempmax = 0 ;
          ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
